# financial-fraud-detection

./: .gitignore
.github/workflows/: main.yml
notebooks/: financial-fraud-usage-np.ipynb  financial-fraud-usage-v2.ipynb  requirements.txt
openshift/: README.md  build-preprocess-image.sh  build-triton-local-push.sh  deploy-inference.sh  deploy-init-pipeline.sh  deploy-preprocess.sh  deploy-training.sh  pipeline.md  simple.md
openshift/docker/: preprocess.Dockerfile
openshift/fraud-inference/: Chart.yaml  values.yaml
openshift/fraud-inference/templates/: _helpers.tpl  deployment.yaml  route.yaml  service.yaml
openshift/fraud-init-pipeline/: Chart.yaml  values.yaml
openshift/fraud-init-pipeline/templates/: _helpers.tpl  configmap.yaml  minio-deployment.yaml  minio-pvc.yaml  minio-secret.yaml  minio-service.yaml  pvc-data.yaml  pvc-models.yaml  secret.yaml
openshift/fraud-preprocess/: Chart.yaml  values.yaml
openshift/fraud-preprocess/templates/: _helpers.tpl  job.yaml  pvc.yaml
openshift/fraud-training/: Chart.yaml  values.yaml
openshift/fraud-training/templates/: _helpers.tpl  configmap.yaml  job.yaml  pvc.yaml
openshift/notebooks/: financial-fraud-usage-openshift.ipynb  pyproject.toml  run-lab.md
src/: preprocess_TabFormer_lp.py  pyproject.toml
